Jacksum 3.0.1-not-yet-released

- added minor features

    - 'jacksum -h parameters', 'jacksum -h options', and 'jacksum -h algorithms'
       show the corresponding section entirely

- bugs fixed

    - fixed: compat files bsd, linux, and openssl should use line separator \n on Microsoft Windows,
      otherwise md5sum, sha1sum, etc. on GNU/Linux cannot read Jacksum's output.
    - typo in compat files linux and openssl which results in wrong stdin names
    - `jacksum -h examples` showed only the first 3 example sections, now it shows all example sections
    - fixed some typos in the help file
    - removed the lab-remnant hex-camelcase from the code


Jacksum 3.0.0, Sep 4, 2021

- Algorithms

  new algorithms
    - 408 new algorithms (including different sizes) have been added
    - SHA-3 winner of the NIS SHA-3 competition (FIPS 202)
      * SHA3-224, SHA3-256, SHA3-384, SHA3-512 provided by the OpenJDK 9+ resp.
        by bouncycastle (bc) as an alternative implementation or if Java < 9 is being used
	  * SHAKE128, SHAKE256 (provided by bc)
    - completion of the SHA-2 family definitions (FIS 180-4):
	  * SHA-512/224, SHA-512/256 provided by the OpenJDK 9+ resp.
  	    by bc as an alternative implementation or if Java < 9 is being used
    - national standards
	  * Kupyna256, Kupyna384, Kupyna512 (Ukraine standard)
	  * LSH (Korean Standard): LSH-256-224, LSH-256-256, LSH-512-224, LSH-512-256, and
        LSH-512-384, LSH-512-512
	  * SM3 (Chinese standard, provided by bc)
	  * Streebog-256, Streebog-512 (Russian standard GOST R 34.11-2012, provided by bc)
    - other modern cryptographic hash functions
	  * BLAKE3 (announced in 2020)
      * BLAKE2s, BLAKE2b (both with support for arbitrary output)
	  * KangarooTwelve (K12) and MarsupilamiFourteen (M14)
      * RadioGatun[32], Radiogatun[64] (provided by Project PNRT SAPHIR)
    - all SHA-3 finalists (round 3) of the NIST SHA-3 competition