@@ -4,6 +4,7 @@ Jacksum 3.0.1-not-yet-released
 
     - 'jacksum -h parameters', 'jacksum -h options', and 'jacksum -h algorithms'
        show the corresponding section entirely
+    - added aliases crc32_jamcrc and crc-32_jamcrc for crc32_ubi
 
 - bugs fixed
 
